[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python Hackpack"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
yapf = "^0.40.2"

[tool.poetry.scripts]
app = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"